fix:去掉uviewplus,不好用

--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -1,1 +1,11 @@
 // css常用类/公共类
+
+.mainBtn {
+  color: @themeColor;
+  border-radius: @radio-n;
+  background: @bac;
+  padding: @padding-s @padding-n;
+  margin: @margin-s;
+  width: fit-content;
+  fonst-size: @fontsize-n;
+}
