--- a/src/static/css/variable.less
+++ b/src/static/css/variable.less
@@ -1,1 +1,25 @@
 // css变量
+
+@themeColor: rgba(252, 121, 48, 1);
+
+@bac: rgba(249, 223, 205, 1);
+
+@border-s: .5rem;
+@border-n: .7rem;
+@border-l: 1rem;
+
+@radio-s: .5rem;
+@radio-n: .7rem;
+@radio-l: 1rem;
+
+@padding-s: .5rem;
+@padding-n: .7rem;
+@padding-l: 1rem;
+
+@margin-s: .5rem;
+@margin-n: .7rem;
+@margin-l: 1rem;
+
+@fontsize-s: .7rem;
+@fontsize-n: .9rem;
+@fontsize-l: 1.2rem;
