--- a/src/static/css/variable.less
+++ b/src/static/css/variable.less
@@ -1,25 +1,52 @@
-// css变量
+@radio-s: 5rpx;
+@radio-m: 10rpx;
+@radio-l: 15rpx;
+@radio-ls: 25rpx;
 
-@themeColor: rgba(252, 121, 48, 1);
+@margin-s: 15rpx;
+@margin-m: 20rpx;
+@margin-l: 30rpx;
+@margin-ls: 40rpx;
 
-@bac: rgba(249, 223, 205, 1);
+@margin-t-pop: 10vh;
 
-@border-s: .5rem;
-@border-n: .7rem;
-@border-l: 1rem;
+@padding-s: 10rpx;
+@padding-m: 15rpx;
+@padding-l: 20rpx;
 
-@radio-s: .5rem;
-@radio-n: .7rem;
-@radio-l: 1rem;
+@borderColor: @themeColor;
+@fontColor: rgba(0, 0, 0, .6);
+@fontColor-dark: rgba(0, 0, 0, .8);
 
-@padding-s: .5rem;
-@padding-n: .7rem;
-@padding-l: 1rem;
+@bacColor: rgb(255, 255, 255);
+@bacColor-bleak: rgba(255, 255, 255, .6);
+@bacColor-bleak-bleak: rgba(122, 115, 116, .1);
+@bacColor-opacity: rgba(0, 0, 0, .2);
+@tabBac: rgba(0, 0, 0, .6);
 
-@margin-s: .5rem;
-@margin-n: .7rem;
-@margin-l: 1rem;
+@fontSize-s: 24rpx;
+@fontSize-m: 30rpx;
+@fontSize-l: 36rpx;
 
-@fontsize-s: .7rem;
-@fontsize-n: .9rem;
-@fontsize-l: 1.2rem;
+@confirmColor: rgba(122, 115, 116, 1);
+
+// 字体大小
+@fontSizeTitle: 35rpx;
+@font-s: 24rpx;
+@font-m: 30rpx;
+@font-l: 36rpx;
+@font-ls: 40rpx;
+
+// 主体颜色
+@themeColor: rgba(226, 225, 228, 1);
+// 猪肝紫
+@themeActiveColor: rgba(84, 30, 36, 1);
+// 选中时的主题高亮颜色
+@themeColor-heightLight: rgba(226, 225, 228, .5);
+
+@fontColor-gray: rgba(71, 75, 76, 1);
+@fontColor-gray-bleak: rgba(71, 75, 76, .7);
+
+@errorColor: rgba(255, 157, 157, 1);
+@successColor: rgba(50, 181, 60, .7);
+
