--- a/src/static/css/variable.less
+++ b/src/static/css/variable.less
@@ -11,7 +11,7 @@
 @margin-t-pop: 10vh;
 
 @padding-s: 10rpx;
-@padding-m: 15rpx;
+@padding-n: 15rpx;
 @padding-l: 20rpx;
 
 @borderColor: @themeColor;
@@ -38,7 +38,7 @@
 @font-ls: 40rpx;
 
 // 主体颜色
-@themeColor: rgba(226, 225, 228, 1);
+@themeColor: rgba(240, 161, 168, 1);
 // 猪肝紫
 @themeActiveColor: rgba(84, 30, 36, 1);
 // 选中时的主题高亮颜色
