--- a/src/uni.scss
+++ b/src/uni.scss
@@ -15,7 +15,7 @@
 /* 颜色变量 */
 
 /* 行为相关颜色 */
-$uni-color-primary:  rgba(240, 161, 168, 1);
+$uni-color-primary: rgba(240, 161, 168, 1);
 $uni-color-success: #4cd964;
 $uni-color-warning: #f0ad4e;
 $uni-color-error: #dd524d;
@@ -72,5 +72,5 @@ $uni-color-title: rgba(240, 161, 168, 1); // 文章标题颜色
 $uni-font-size-title: 20px;
 $uni-color-subtitle: #555; // 二级标题颜色
 $uni-font-size-subtitle: 18px;
-$uni-color-paragraph: #3f536e; // 文章段落颜色
+$uni-color-paragraph: rgba(240, 161, 168, 1); // 文章段落颜色
 $uni-font-size-paragraph: 15px;
