--- a/src/static/css/variable.less
+++ b/src/static/css/variable.less
@@ -40,7 +40,7 @@
 // 主体颜色
 @themeColor: rgba(240, 161, 168, 1);
 // 猪肝紫
-@themeActiveColor: rgba(84, 30, 36, 1);
+@themeActiveColor: #ff4437;
 // 选中时的主题高亮颜色
 @themeColor-heightLight: rgba(226, 225, 228, .5);
 
