feat:修改部分引入

--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -129,3 +129,14 @@
 view{
   font-family: 'PingFang', sans-serif;
 }
+.manBtn{
+  display: flex;
+  flex-direction: row;
+  white-space: pre-wrap;
+  color: @fontColor;
+  font-size: @fontSize-m;
+  border: @themeActiveColor 1px solid;
+  padding: @padding-n @padding-l;
+  width: fit-content;
+  border-radius: @radio-m;
+}
