feat:修改部分类名,添加接口已完成

--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -139,4 +139,29 @@ view{
   padding: @padding-n @padding-l;
   width: fit-content;
   border-radius: @radio-m;
+  margin: .1rem;
+}
+.ice-tag{
+  color: @fontColor;
+  font-size: @font-m;
+  padding: @padding-s @padding-l;
+  margin: @margin-s-s;
+  background: @bacColor-bleak-bleak;
+  border-radius: @radio-m;
+  width: fit-content;
+  height: fit-content;
+}
+.ice-column{
+  display: flex;
+  flex-direction: column;
+}
+.ice-row{
+  display: flex;
+  flex-direction: row;
+}
+.justCenter{
+  justify-content: center;
+}
+.alignCenter{
+  align-items: center;
 }
