--- a/src/static/css/variable.less
+++ b/src/static/css/variable.less
@@ -3,7 +3,8 @@
 @radio-l: 15rpx;
 @radio-ls: 25rpx;
 
-@margin-s: 15rpx;
+@margin-s-s: 5rpx;
+@margin-s: 10rpx;
 @margin-m: 20rpx;
 @margin-l: 30rpx;
 @margin-ls: 40rpx;
@@ -38,9 +39,9 @@
 @font-ls: 40rpx;
 
 // 主体颜色
-@themeColor: rgba(240, 161, 168, 1);
+@themeColor: rgba(240, 161, 168, 1)44191e;
 // 猪肝紫
-@themeActiveColor: #ff4437;
+@themeActiveColor: rgba(255, 68, 55, 1);
 // 选中时的主题高亮颜色
 @themeColor-heightLight: rgba(226, 225, 228, .5);
 
