--- a/src/static/css/variable.less
+++ b/src/static/css/variable.less
@@ -11,6 +11,7 @@
 
 @margin-t-pop: 10vh;
 
+@padding-s-s: 5rpx;
 @padding-s: 10rpx;
 @padding-n: 15rpx;
 @padding-l: 20rpx;
@@ -41,7 +42,7 @@
 // 主体颜色
 @themeColor: rgba(240, 161, 168, 1)44191e;
 // 猪肝紫
-@themeActiveColor: rgba(255, 68, 55, 1);
+@themeActiveColor: rgb(141, 41, 34);
 // 选中时的主题高亮颜色
 @themeColor-heightLight: rgba(226, 225, 228, .5);
 
