--- a/src/static/css/variable.less
+++ b/src/static/css/variable.less
@@ -23,6 +23,9 @@
 @bacColor: rgb(255, 255, 255);
 @bacColor-bleak: rgba(255, 255, 255, .6);
 @bacColor-bleak-bleak: rgba(122, 115, 116, .1);
+@bacColor-dark: rgb(51, 51, 51);
+@bacColor-dark-bleak: rgb(51, 51, 51, .6);
+@bacColor-dark-bleak-bleak: rgb(51, 51, 51, .1);
 @bacColor-opacity: rgba(0, 0, 0, .2);
 @tabBac: rgba(0, 0, 0, .6);
 
@@ -40,9 +43,9 @@
 @font-ls: 40rpx;
 
 // 主体颜色
-@themeColor: rgba(240, 161, 168, 1)44191e;
+@themeColor: rgba(240, 161, 168, 1);
 // 猪肝紫
-@themeActiveColor: rgb(141, 41, 34);
+@themeActiveColor: rgb(148, 89, 95);
 // 选中时的主题高亮颜色
 @themeColor-heightLight: rgba(226, 225, 228, .5);
 
@@ -51,4 +54,13 @@
 
 @errorColor: rgba(255, 157, 157, 1);
 @successColor: rgba(50, 181, 60, .7);
+
+// 语义化颜色  枫叶红
+// danger
+@dangerColor: rgba(194, 31, 48, 1);
+@dangerColor-bleak: rgba(194, 31, 48, .5);
+
+@time-s: .5s;
+@time-m: .7s;
+@time-l: 1s;
 
