feat:新增弹窗组件,但是我觉得有点丑,新增部分页面,修改部分参数

--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -167,6 +167,9 @@ view{
 .justCenter{
   justify-content: center;
 }
+.justBetween{
+  justify-content: space-between;
+}
 .alignCenter{
   align-items: center;
 }
@@ -190,4 +193,9 @@ view{
 }
 .noMargin{
   margin: 0 !important;
+}
+.lineBottom75{
+  border-bottom: @borderColor 1px solid;
+  padding-left: 14%;
+  padding-right: 14%;
 }
