--- a/src/static/css/variable.less
+++ b/src/static/css/variable.less
@@ -15,6 +15,7 @@
 @padding-s: 10rpx;
 @padding-n: 15rpx;
 @padding-l: 20rpx;
+@padding-l-s: 30rpx;
 
 @borderColor: @themeColor;
 @fontColor: rgba(0, 0, 0, .6);
@@ -28,6 +29,7 @@
 @bacColor-dark-bleak-bleak: rgb(51, 51, 51, .1);
 @bacColor-opacity: rgba(0, 0, 0, .2);
 @tabBac: rgba(0, 0, 0, .6);
+@bacOpacity:.7;
 
 @fontSize-s: 24rpx;
 @fontSize-m: 30rpx;
