feat:新增头像修改,查看

--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -185,6 +185,11 @@ view{
   height: 100%;
   width: 20rpx;
 }
+.transverseBlock{
+  display: flex;
+  height: 20rpx;
+  width: 100%;
+}
 .heightFit{
   height: fit-content;
 }
