--- a/src/static/css/variable.less
+++ b/src/static/css/variable.less
@@ -61,7 +61,7 @@
 // danger
 @dangerColor: rgba(194, 31, 48, 1);
 @dangerColor-bleak: rgba(194, 31, 48, .5);
-
+@dangerColor-bleak-bleak:rgba(194, 31, 48, .1);
 @time-s: .5s;
 @time-m: .7s;
 @time-l: 1s;
