feat:新增联系我们的组件,修改部分组件样式,修改联系人的修改模块

--- a/src/static/css/variable.less
+++ b/src/static/css/variable.less
@@ -25,9 +25,9 @@
 @bacColor-bleak: rgba(255, 255, 255, .6);
 @bacColor-bleak-bleak: rgba(122, 115, 116, .1);
 @bacColor-dark: rgb(51, 51, 51);
-@bacColor-dark-bleak: rgb(51, 51, 51, .6);
-@bacColor-dark-bleak-bleak: rgb(51, 51, 51, .1);
-@bacColor-opacity: rgba(0, 0, 0, .2);
+@bacColor-dark-bleak: rgba(51, 51, 51, .6);
+@bacColor-dark-bleak-bleak: rgba(51, 51, 51, .1);
+@bacColor-opacity: rgba(0, 0, 0, .1);
 @tabBac: rgba(0, 0, 0, .6);
 @bacOpacity:.7;
 
