--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -26,7 +26,7 @@
 
 // 容器
 .container{
-  .padding-lr-20();
+  //.padding-lr-20();
 }
 
 .flex-row(@direction: row){
@@ -102,6 +102,7 @@
   border: @themeColor 1px solid;
   padding: 10rpx;
   border-radius: @radio-m;
+  font-size: 33rpx;
   width: fit-content;
 }
 // 语义化按钮
@@ -155,6 +156,7 @@ view{
   border-radius: @radio-m;
   width: fit-content;
   height: fit-content;
+  white-space: nowrap;
 }
 .ice-column{
   display: flex;
@@ -163,6 +165,7 @@ view{
 .ice-row{
   display: flex;
   flex-direction: row;
+  color: @fontColor;
 }
 .justCenter{
   justify-content: center;
@@ -203,4 +206,13 @@ view{
   border-bottom: @borderColor 1px solid;
   padding-left: 14%;
   padding-right: 14%;
+}
+.white{
+  background: @bacColor-bleak;
+  border-radius: @radio-m;
+  padding: @padding-s;
+  margin-bottom: @margin-s;
+}
+.whiteBac{
+  background: @bacColor-bleak;
 }
