feat:新增部分组件

--- a/src/static/css/variable.less
+++ b/src/static/css/variable.less
@@ -20,6 +20,7 @@
 @borderColor: @themeColor;
 @fontColor: rgba(0, 0, 0, .6);
 @fontColor-dark: rgba(0, 0, 0, .8);
+@fontColor-white: rgba(255, 255, 255, .8);
 
 @bacColor: rgb(255, 255, 255);
 @bacColor-bleak: rgba(255, 255, 255, .6);
