feat:修改部分接口逻辑,增加防抖

--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -109,6 +109,8 @@
 .danger{
   color: @dangerColor-bleak !important;
   border-color: @dangerColor-bleak !important;
+  font-size: @fontSize-s !important;
+  margin-bottom: @margin-s-s;
 }
 
 .markdown{
