feat:修改部分组件,修改部分主题色

--- a/src/static/css/common.less
+++ b/src/static/css/common.less
@@ -183,6 +183,21 @@ view{
   color: @fontColor;
   margin: @margin-s-s;
 }
+.ice-text-l{
+  font-size: @font-l;
+  color: @fontColor;
+  margin: @margin-s-s;
+}
+
+.fontW-s{
+  font-weight: lighter;
+}
+.fontW-n{
+  font-weight: normal;
+}
+.fontW-l{
+  font-weight: bolder;
+}
 
 // 横向元素之间的占位空隙元素
 .verticalBlock{
@@ -217,4 +232,8 @@ view{
 }
 .whiteBac{
   background: @bacColor-bleak;
+}
+
+.ice-header{
+
 }
